--- a/deployment/rubble-cilium.yml
+++ b/deployment/rubble-cilium.yml
@@ -106,6 +106,118 @@ metadata:
   name: kube-rubble-config
   namespace: kube-system
 data:
+  init.sh: |
+    #!/bin/bash
+    set -x
+    init_node_bpf() {
+      nsenter -t 1 -m -- bash -c '
+      mount | grep "/sys/fs/bpf type bpf" || {
+      # Mount the filesystem until next reboot
+      echo "Mounting BPF filesystem..."
+      mount bpffs /sys/fs/bpf -t bpf
+    
+      echo "Link information:"
+      ip link
+    
+      echo "Routing table:"
+      ip route
+    
+      echo "Addressing:"
+      ip -4 a
+      ip -6 a
+    #  date > /tmp/cilium-bootstrap-time
+      echo "Node initialization complete"
+    }'
+    }
+    
+    set -o errexit
+    set -o nounset
+    
+    # install CNIs
+    cp -f /usr/bin/rubble /opt/cni/bin/
+    chmod +x /opt/cni/bin/rubble
+    cp -f /usr/bin/cilium-cni /opt/cni/bin/
+    chmod +x /opt/cni/bin/cilium-cni
+    #chmod +x /bin/policyinit.sh
+    
+    #ENIIP_VIRTUAL_TYPE=$(jq .eniip_virtual_type? -r < /etc/eni/10-terway.conf | tr '[:upper:]' '[:lower:]')
+    ENIIP_VIRTUAL_TYPE="ipvlan"
+    
+    if [ "$ENIIP_VIRTUAL_TYPE" = "ipvlan" ]; then
+      # check kernel version & enable cilium
+      KERNEL_MAJOR_VERSION=$(uname -r | awk -F . '{print $1}')
+      KERNEL_MINOR_VERSION=$(uname -r | awk -F . '{print $2}')
+      # kernel version equal and above 4.19
+      if { [ "$KERNEL_MAJOR_VERSION" -eq 4 ] && [ "$KERNEL_MINOR_VERSION" -ge 19 ]; } ||
+         [ "$KERNEL_MAJOR_VERSION" -gt 4 ]; then
+    
+        echo "Init node BPF"
+        init_node_bpf
+    #    echo "Creating 10-terway.conflist"
+    #
+    #    BANDWIDTH_MODE=tc
+    #    if bpftool -j feature probe | grep bpf_skb_ecn_set_ce ; then
+    #      BANDWIDTH_MODE=edt
+    #    fi
+    	
+    #
+    #    jq --arg bandwidth_mode "$BANDWIDTH_MODE" '. |= . + {
+    #      "bandwidth_mode": $bandwidth_mode
+    #    }' < /etc/eni/10-terway.conf | jq '
+    #    {
+    #      "cniVersion": "0.3.1",
+    #      "name": "terway-chainer",
+    #      "plugins": [
+    #          del(.name,.cniVersion),
+    #          {
+    #             "type": "cilium-cni"
+    #          }
+    #       ]
+    #    }' > /etc/cni/net.d/10-terway.conflist
+    #
+    #  rm -f /etc/cni/net.d/10-terway.conf || true
+    #  
+        #cp /etc/kube-rubble/10-rubble.conf /etc/cni/net.d/10-rubble.conf
+      else
+        echo "Linux kernel version <= 4.19, skipping cilium config"
+    #    cp /etc/eni/10-terway.conf /etc/cni/net.d/
+      fi
+    #else
+    #  rm -f /etc/cni/net.d/10-terway.conflist || true
+    #  cp /etc/eni/10-terway.conf /etc/cni/net.d/
+    fi
+    
+    # sysctl -w net.ipv4.conf.eth0.rp_filter=0 # sysctl: cannot stat /proc/sys/net/ipv4/conf/eth0/rp_filter: No such file or directory
+    modprobe sch_htb || true
+    chroot /host sh -c "ls -l /etc/udev/rules.d/; ls -l /lib/udev/rules.d/; ls -l /lib/udev/; rm -f /etc/udev/rules.d/75-persistent-net-generator.rules /lib/udev/rules.d/60-net.rules /lib/udev/rules.d/61-eni.rules /lib/udev/write_net_rules && udevadm control --reload-rules && udevadm trigger" 
+  policyinit.sh: |
+    #!/usr/bin/bash
+
+    set -x
+    if [ -z "$DISABLE_POLICY" ] || [ "$DISABLE_POLICY" = "false" ] || [ "$DISABLE_POLICY" = "0" ]; then
+      ENABLE_POLICY="default"
+    else
+      ENABLE_POLICY="never"
+    fi
+
+    extra_args=""
+
+    if bpftool -j feature probe | grep bpf_skb_ecn_set_ce ; then
+        extra_args="${extra_args} --enable-bandwidth-manager=true "
+    fi
+      cilium preflight register-crd --k8s-kubeconfig-path /root/.kube/config
+      echo "using cilium as network routing & policy"
+      # shellcheck disable=SC2086
+      exec cilium-agent --tunnel=disabled --enable-ipv4-masquerade=false --enable-ipv6-masquerade=false \
+            --enable-policy=$ENABLE_POLICY \
+            --agent-health-port=9099 --disable-envoy-version-check=true \
+            --enable-local-node-route=false --ipv4-range=auto --enable-endpoint-health-checking=false \
+            --enable-health-checking=false --enable-service-topology=true --disable-cnp-status-updates=true --k8s-heartbeat-timeout=0 --enable-session-affinity=true \
+            --install-iptables-rules=false --enable-l7-proxy=false --enable-identity-mark=true --k8s-kubeconfig-path=/root/.kube/config \
+            --kube-proxy-replacement=partial \
+            --ipam=cluster-pool ${extra_args}
+    # exec failed in init.sh, exec here
+    sysctl -w net.ipv4.conf.eth0.rp_filter=0
   rubble.json: |
     {
       "service_cidr": "10.222.0.0/16",
@@ -118,13 +230,21 @@ data:
       "node_name": "node-2",
       "period": 30
     }
-  10-rubble.conf: |
+  10-rubble.conflist: |
     {
         "cniVersion": "0.3.1",
-        "name": "rubble",
-        "type": "rubble",
-        "ipMasq": true,
-        "master": "ens3"
+        "name": "rubble-chainer",
+        "plugins": [
+          {
+            "type": "rubble",
+            "ipMasq": true,
+            "master": "ens3"
+          },
+          {
+            "type": "cilium-cni"
+          }
+        ]
+
     }
   disable_network_policy: "false"
   os_auth_url: "http://keystone.openstack.svc.cluster.local/v2.0"
@@ -179,6 +299,9 @@ spec:
               name: lib-modules
             - mountPath: /host
               name: host-root
+            - name: rubble-init
+              mountPath: '/bin/init.sh'
+              subPath: init.sh
       containers:
         - name: rubble-daemon
           image: hub.easystack.cn/cni-devops/rubble:latest
@@ -304,7 +427,10 @@ spec:
             - mountPath: /run/xtables.lock
               name: xtables-lock
             - mountPath: /root/.kube/config
-              name: kubeconfig              
+              name: kubeconfig
+            - mountPath: "/bin/policyinit.sh"
+              name: policyinit-script
+              subPath: policyinit.sh
       volumes:
         - name: daemonconfig
           configMap:
@@ -316,8 +442,22 @@ spec:
           configMap:
             name: kube-rubble-config
             items:
-              - key: 10-rubble.conf
-                path: 10-rubble.conf
+              - key: 10-rubble.conflist
+                path: 10-rubble.conflist
+        - name: policyinit-script
+          configMap:
+            defaultMode: 0755
+            name: kube-rubble-config
+            items:
+              - key: policyinit.sh
+                path: policyinit.sh
+        - name: rubble-init
+          configMap:
+            defaultMode: 0755
+            name: kube-rubble-config
+            items:
+              - key: init.sh
+                path: init.sh
         - name: cni-bin
           hostPath:
             path: /opt/cni/bin
